# Jobs

./: .dockerignore  .gitignore  Makefile  README.md  backend.Dockerfile  compose.yaml  requirements.txt
.github/workflows/: deploy.yml  publish-backend-image.yml  test.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  db.py  gen_openapi.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py
backend/k8s/: deployment.yaml
backend/routers/: jobs.py
backend/src/api/: __main__.py  app.py  db.py  main.py  server.py
backend/src/api/routers/: __init__.py  hello.py  jobs.py
backend/src/cli/: main.py
backend/src/example_repo/: jobs.py  qb.py
backend/src/exceptions/: __init__.py  exceptions.py
backend/src/models/: __init__.py  jobs.py
backend/src/repositories/: __init__.py  jobs.py  query.py
backend/src/repositories/migrations/: 20240314172850_create_jobs_table.sql
backend/src/repositories/util/: __init__.py  fmt_query_log.py
backend/util/: __init__.py  dict_factory.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppLayout.tsx  api.ts  index.html  urls.tsx
frontend/src/Jobs/: JobsPage.tsx  JobsTable.tsx  NewJobForm.tsx
frontend/src/components/: ResponsiveModal.tsx
tests/util/: dict_factory_test.py
